--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="side" id="side2">
             <img src="image2.jpg" alt="Image 2">
-            <audio id="sound2" src="/messi.mp3"></audio>
+            <audio id="sound2" src="messi.mp3"></audio>
         </div>
     </div>
     <div class="result">
