--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Click Game</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            direction: rtl; /* Right-to-left text direction for Arabic */
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -18,7 +23,7 @@
         </div>
     </div>
     <div class="result">
-        <p id="winner">Click to play</p>
+        <p id="winner">انقر للعب</p>
         <div class="counts">
             <p class="count" id="click-count1">0</p>
             <p class="score" id="score-count1">فريق رونالدو: 0</p>
